--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -1,19 +1,19 @@
 <%= form_with(model: artist, local: true) do |form| %>
-  <% if artist.errors.any? %>
+  <!-- <%# if artist.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(artist.errors.count, "error") %> prohibited this artist from being saved:</h2>
+      <h2><%#= pluralize(artist.errors.count, "error") %> prohibited this artist from being saved:</h2>
 
       <ul>
-        <% artist.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
+        <%# artist.errors.full_messages.each do |message| %>
+          <li><%#= message %></li>
+        <#% end %>
       </ul>
     </div>
-  <% end %>
+  <#% end %> -->
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name,class: "form-control form-control-lg" %>
   </div>
 
   <div class="field">
@@ -27,6 +27,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: "btn btn-primary btn-lg" %>
   </div>
 <% end %>
