--- a/app/views/artists/edit.html.erb
+++ b/app/views/artists/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing Artist</h1>
+<div class="col-lg-8">
 
+	<h1>Editing Artist</h1>
 <%= render 'form', artist: @artist %>
 
 <%= link_to 'Show', @artist %> |
 <%= link_to 'Back', artists_path %>
+
+
+</div>
+
+
