--- a/app/views/albums/edit.html.erb
+++ b/app/views/albums/edit.html.erb
@@ -1,6 +1,23 @@
-<h1>Editing Album</h1>
+<%= render 'layouts/display' %>
 
-<%= render 'form', album: @album %>
+<div  style="width:50%; margin-left:200px;margin-top:50px">
+    
+    <%= form_with(model: @album, local: true) do |form| %>
+      <div class="field form-group">
+        <%= form.text_field :title,class:"form-control",placeholder:"Title"%><br>
+      </div>
 
-<%= link_to 'Show', @album %> |
-<%= link_to 'Back', albums_path %>
+      <div>
+        <%= form.text_field :description,class:"form-control",placeholder:"Description" %><br>
+      </div>
+
+      <div>
+        <%= form.text_field :language,class:"form-control",placeholder:"Language" %><br>
+      </div>
+
+      <%= hidden_field_tag :artist_id, @artist %>
+      <div>
+        <%= form.submit :Submit,style:"border: none;border-radius:5px;outline: 0;padding: 12px;color: white;background-color: #000;text-align: center;cursor: pointer;width: 50%;font-size: 15px;margin-left:150px;margin-top:30px" %>
+      </div>
+    <% end %>
+</div>
