--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,6 +1,22 @@
-<h1>Editing Song</h1>
+<%= render 'layouts/display' %>
 
-<%= render 'form', song: @song %>
+<div  style="width:50%; margin-left:200px;margin-top:50px">
+    
+    <%= form_with(model: @song, local: true) do |form| %>
+      <div class="field form-group">
+        <%= form.text_field :title,class:"form-control",placeholder:"Title"%><br>
+      </div>
 
-<%= link_to 'Show', @song %> |
-<%= link_to 'Back', songs_path %>
+      <div>
+        <%= form.text_field :duration,class:"form-control",placeholder:"Duration" %><br>
+      </div>
+
+      <div>
+        <%= form.text_area :lyrics,class:"form-control",placeholder:"Lyrics" %><br>
+      </div>
+      <%= hidden_field_tag :artist_id, @artist %>
+      <div>
+        <%= form.submit :Submit,style:"border: none;border-radius:5px;outline: 0;padding: 12px;color: white;background-color: #000;text-align: center;cursor: pointer;width: 50%;font-size: 15px;margin-left:150px;margin-top:30px" %>
+      </div>
+    <% end %>
+</div>
