--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,30 @@
-<p id="notice"><%= notice %></p>
+<%= render 'layouts/display' %>
+<div class="p-4 shadow-4 rounded-3" style="background-color: white;font-family:serif;">
+  <h2><%= current_user.username %></h2>
+  <p>
+    <%= current_user.phone %>
+  </p>
 
-<h1>Users</h1>
-<p><%= current_user.id %></p>
+  <hr class="my-4" />
 
-<p><strong><%= link_to 'Playlist',user_playlists_url(current_user.id) %></strong>
+  <p>
+    <%= current_user.email %>
+  </p>
 
-<%= link_to 'New Artist', new_artist_path %>
+<!-- <strong>Image:</strong>
+  <#% @images.each do |image| %>
+  <div class="d-flex flex-row col-3">
+  <p>
+  
+  <%#= image.image_url %>
+
+  </p>  
+  </div>
+  <%#end%>
+   -->
+
+  <% if alert %>
+    <p class="alert alert-danger mt-4"><%= alert %></p>
+  <% end %>
+</div>
+
