--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -1,33 +1,109 @@
-<p id="notice"><%= notice %></p>
+<nav class="navbar navbar-expand-sm py-0 navbar-light bg-light">
+    <div class="navbar-brand" href="#">
+      <img  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTifDO2QG1FcKP6W508NmdSzSWB9MZAFYM0aA&usqp=CAU" alt="myStore" style="width: 70px;"></div>
+  <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-<h1>Albums</h1>
+            <li class="r4"><%= link_to'Home',root_path,class: "nav-link active" %></li>
+            <%if user_signed_in?%>
+              
+              <li><%= link_to'Albums',albums_path, class:"nav-link"%></li>
+              <li ><%= link_to'Songs',songs_path, class: "nav-link"%></li>
+              <li ><%= link_to'MyPlaylists',playlist_path(current_user), class: "nav-link"%></li>
+              <li ><%= link_to'Profile',user_path(current_user), class: "nav-link"%></li>
+              <li><%= link_to 'Sign Out',destroy_user_session_path,method: :delete ,class: "nav-link"%></li>
+            <%elsif artist_signed_in?%>
+              <li ><%= link_to'Albums',albums_path(current_artist), class: "nav-link"%></li>
+              <li ><%= link_to'Profile',artist_path(current_artist), class: "nav-link"%></li>
+              <li><%= link_to 'Sign Out',destroy_artist_session_path,method: :delete ,class: "nav-link"%></li>
+            <%else%>
+                  <li><%= link_to 'Sign In',new_user_session_path ,class: "nav-link"%></li>
+                  <li><%= link_to 'Sign In As Artist',new_artist_session_path ,class: "nav-link"%></li>
+            <%end%>
+        </ul>
+      </div>
+      <%if user_signed_in?%>
+    <%= form_tag root_path,method: :get do%>
+    <%= text_field_tag :q,params[:q],placeholder: "Search albums",style: "border-radius:10px;width:400px;margin-left:15px;" %>
+    <%= submit_tag "Search",name: nil,class:"btn btn-success btn-sm",style: "margin-left:5px;margin-right:15px;height:25px;" %>
+    <%end%>
+    <%end%>
+    </div>
+  </nav>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Artist</th>
-      <th>Description</th>
-      <th>Language</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @albums.each do |album| %>
+  <%if user_signed_in?%>
+
+
+  <table class="table">
+    <thead>
+      <tr>
+        <!-- <th scope="col">   </th> -->
+        <th scope="col">Title</th>
+        <!-- <th scope="col">Artist</th> -->
+        <th scope="col">Description</th>
+        <th scope="col">Language</th>
+        <th scope="col">   </th>
+        <!-- <th colspan="3"></th> -->
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @albums.each do |album| %>
+        <tr>
+          <td><%= album.title %></td>
+          <!-- <td><%#= album.artist_id %></td> -->
+          <td><%= album.description %></td>
+          <td><%= album.language %></td>
+          <td><%= link_to 'Show', album_path(album),class:"btn btn-primary btn-sm" %></td>
+          
+          <td><%= link_to 'Add to Playlist',insert_playlists_path(:user_id=>current_user.id,:album_id=>album.id),:method=>:post,id: "my-button",class:"btn btn-success btn-sm",style:"width:100px;" %></td></tr>
+          <% end %>
+    </tbody>
+  </table>
+     <%= link_to 'Go to Playlist',playlist_path(current_user),class:"btn btn-success",style:"width:450px;margin-left:400px;"%>
+  <br>
+  <%else%>
+
+   <table class="table",style="font-family:serif;">
+    <thead>
+      <tr>
+        <!-- <th scope="col">  </th> -->
+        <th scope="col">Title</th>
+        <th scope="col">Description</th>
+        <th scope="col">Language</th>
+        <th scope="col">  </th>
+        <th scope="col">  </th>
+        <th scope="col">  </th>
+       </tr>
+    </thead>
+    <tbody>
+      
+      <!-- <#% if current_artist.albums.present? %> -->
+       
+      <% current_artist.albums.each do |album| %>
       <tr>
         <td><%= album.title %></td>
-        <td><%= album.artist_id %></td>
+          <!-- <td><%#= album.artist_id %></td> -->
         <td><%= album.description %></td>
         <td><%= album.language %></td>
-        <td><%= link_to 'Show', album %></td>
-        <td><%= link_to 'Edit', edit_album_path(album) %></td>
-        <td><%= link_to 'Destroy', album, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <td><%= link_to 'Show',album_path(album),class:"btn btn-primary btn-sm"%></td>
+        <td><%= link_to 'Update',edit_album_path(album),class:"btn btn-primary btn-sm"%></td>
+        <td><%= button_to 'Remove',album_path(album),method: :delete,data: { confirm: 'Are you sure?'},class:"btn btn-danger btn-sm"%></td>
+        <td><%= link_to 'Songs',songs_path(current_artist.albums),class:"btn btn-primary btn-sm" %></td>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+      <%end%>
+    </tbody>
+  </table>
+  <%= link_to "Add new album", new_album_path(:artist_id=>params[:id]),class:"btn btn-success",style:"margin-left:1300px;width:300px" %>
+  <%end%>
+  <% if flash %>
+    <p class="notice text-success mt-4"><%= notice %></p>
+<% end %>
 
-<br>
-
-<%= link_to 'New Album', new_album_path %>
