--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: artist, local: true) do |form| %>
+<!-- <%#= form_with(model: artist, local: true) do |form| %> -->
   <!-- <%# if artist.errors.any? %>
     <div id="error_explanation">
       <h2><%#= pluralize(artist.errors.count, "error") %> prohibited this artist from being saved:</h2>
@@ -11,22 +11,22 @@
     </div>
   <#% end %> -->
 
-  <div class="form-group">
-    <%= form.label :name %>
-    <%= form.text_field :name,class: "form-control form-control-lg" %>
+  <!-- <div class="form-group">
+    <%#= form.label :name %>
+    <%#= form.text_field :name,class: "form-control form-control-lg" %>
   </div>
 
   <div class="field">
-    <%= form.label :image_url %>
-    <%= form.text_field :image_url %>
+    <%#= form.label :image_url %>
+    <%#= form.text_field :image_url %>
   </div>
 
   <div class="field">
-    <%= form.label :region %>
-    <%= form.text_field :region %>
+    <%#= form.label :region %>
+    <%#= form.text_field :region %>
   </div>
 
   <div class="actions">
-    <%= form.submit class: "btn btn-primary btn-lg" %>
+    <%#= form.submit class: "btn btn-primary btn-lg"%>
   </div>
-<% end %>
+<#% end %> -->
