--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,6 +5,10 @@
       <%= bootstrap_devise_error_messages! %>
 
       <div class="form-group">
+        <%= f.label :username %>
+        <%= f.text_field :username, autofocus: true, autocomplete: 'name', class: 'form-control' %>
+      </div>
+      <div class="form-group">
         <%= f.label :email %>
         <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
       </div>
