--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -1,5 +1,33 @@
-<h1>New Playlist</h1>
+<%= render 'layouts/display' %>
 
-<%= render 'form', playlist: @playlist %>
+<% if @playlist.errors.any? %>
+  <div id="error_explanation",style="font-family:serif;">
+    <ul>
+      <% @playlist.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
 
-<%= link_to 'Back', playlists_path %>
+<div  style="width:50%; margin-left:200px;margin-top:50px">
+    
+    <%= form_with model: @playlist, url: playlists_path ,local: true do |form| %>
+      <div class="field form-group">
+        <%= form.text_field :title,class:"form-control",placeholder:"Title"%><br>
+      </div>
+
+      <div>
+        <%= form.text_area :description,class:"form-control",placeholder:"Description" %><br>
+      </div>
+
+      <div>
+
+      <%= hidden_field_tag :user_id, @user %>
+     
+      <div>
+        <%= form.submit :Submit,style:"border: none;border-radius:5px;outline: 0;padding: 12px;color: white;background-color: #000;text-align: center;cursor: pointer;width: 50%;font-size: 15px;margin-left:150px;margin-top:30px" %>
+      </div>
+    <% end %>
+    
+</div>
