--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,8 @@
-
+<%= render 'layouts/display' %>
 <p id="notice"><%= notice %></p>
 
 <h1>Users</h1>
 <p><%= current_user.id %></p>
 
-<p><strong><%= link_to 'Playlist',user_playlists_url(current_user.id) %></strong>
 
-<%= link_to 'New Artist', new_artist_path %>
+
