--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -3,5 +3,8 @@
 	<div class="field form-group">
 		<%= form.text_area :image_url,class:"form-control",placeholder:"Image_Url"%> <br> 
 	</div>
+	<div>
+		<%= form.submit :Submit,style:"border: none;border-radius:5px;outline: 0;padding: 12px;color: white;background-color: #000;text-align: center;cursor: pointer;width: 50%;font-size: 15px;margin-left:150px;margin-top:30px" %>
+      </div>
 	<% end %>
 </div>
