--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'layouts/display' %>
 <div class="p-4 shadow-4 rounded-3" style="background-color: white;font-family:serif;">
-  <h2><%= current_user.username %></h2>
+  <p><%= current_user.username %></p>
   <p>
     <%= current_user.phone %>
   </p>
