--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -25,7 +25,10 @@
       <div>
         <%= form.text_field :language,class:"form-control",placeholder:"Language" %><br>
       </div>
-
+      
+      <div>
+        <%= form.text_field :image_url,class:"form-control",placeholder:"Image_Url" %><br>
+      </div>
       <%= hidden_field_tag :artist_id, @artist %>
      
       <div>
