--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,1 +1,273 @@
-<%= render 'layouts/display' %>
+<nav class="navbar navbar-expand-sm py-0 navbar-light bg-light">
+  <div class="navbar-brand" href="#"><img  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTifDO2QG1FcKP6W508NmdSzSWB9MZAFYM0aA&usqp=CAU" alt="myStore" style="width: 70px;"></div>
+<div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+          <li class="r4"><%= link_to'Home',root_path,class: "nav-link active" %></li>
+          <%if user_signed_in?%>
+            
+            <li><%= link_to'Albums',albums_path, class:"nav-link"%></li>
+            <li ><%= link_to'Songs',songs_path, class: "nav-link"%></li>
+            <li ><%= link_to'MyPlaylists',playlists_path(current_user.playlists), class: "nav-link"%></li>
+            <li ><%= link_to'Profile',user_path(current_user), class: "nav-link"%></li>
+            <li><%= link_to 'Sign Out',destroy_user_session_path,method: :delete ,class: "nav-link"%></li>
+          <%elsif artist_signed_in?%>
+            <li ><%= link_to'Albums',albums_path, class: "nav-link"%></li>
+            <li ><%= link_to'Profile',artist_path(current_artist), class: "nav-link"%></li>
+            <li><%= link_to 'Sign Out',destroy_artist_session_path,method: :delete ,class: "nav-link"%></li>
+          <%else%>
+                <li><%= link_to 'Sign In',new_user_session_path ,class: "nav-link"%></li>
+                <li><%= link_to 'Sign In As Artist',new_artist_session_path ,class: "nav-link"%></li>
+          <%end%>
+      </ul>
+    </div>
+    <%#= form_tag root_path,method: :get do %>
+    <%#= text_field_tag :q,params[:q],placeholder:"Search albums/songs",style: "border-radius:10px;width:400px;"%>
+    <%#= submit_tag "Search",name: nil,class:"btn btn-success",style: "margin-left:5px;margin-right:15px;" %>
+    <!-- <#% end %> -->
+  </div>
+</nav>
+
+
+
+
+<div class="p-5 text-center bg-image rounded-3" style="
+    background-image: url('https://images.pexels.com/photos/3721941/pexels-photo-3721941.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+    background-repeat: no-repeat;
+    background-size: 100% ; 
+    height: 900px;
+    
+    
+  ">
+  <div class="mask">
+    <div class="d-flex justify-content-center align-items-center h-100">
+      <div class="text-white" style="font-family:serif;text-border-color:black; text-shadow: -1px 1px 0 #000;">
+        <h1 class="mb-3 mt-5";><b>Welcome to MyMusic!</b></h1>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div style="margin-top:30px">
+<% if user_signed_in? %>
+  <% @songs.each do |song| %>
+    <section style="background-color: #eee;">
+      <div class="container py-8">
+        <div class="row justify-content-center mb-3">
+          <div class="col-md-4 col-xl-10">
+            <div class="card shadow-0 border rounded-3">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
+                    <div class="bg-image hover-zoom ripple rounded ripple-surface">
+                      <!-- <#% if product.image.attached? %>
+                          <%#= image_tag(product.image, class: "image")%>
+                      <%# end%> -->
+                      <a href="#!">
+                        <div class="hover-overlay">
+                          <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                  <div class="col-md-6 col-lg-6 col-xl-6">
+                    <h5><strong><%= song.title %></strong></h5>
+                    <p class="text-truncate mb-4 mb-md-0">
+                        <%= song.duration %>
+                    </p>
+                    <i>Artist:
+                        <%= song.artist.name %><br>
+                    </i>
+                  </div>
+                  <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
+                    <div class="d-flex flex-column mt-2">
+                        <%= link_to 'Show', song_path(song), class:"btn btn-primary btn-sm" %>
+                        <div class="d-flex flex-column mt-2">
+                        <% if current_user.playlists.present?%>
+                                <%= form_with url: insert_playlists_path, local: true do |form| %>
+                                    <div class="field form-group">
+                                      <%= text_field_tag :playlist_id, "", class:"form-control",placeholder:"Playlist Id"%><br>
+                                    </div>
+
+
+                                    <%= hidden_field_tag :song_id, song.id %>
+                                    <%= hidden_field_tag :user_id, current_user.id %>
+                                    <%= form.submit "Add to playlist" %>
+                                  <% end %>
+                              
+                          <%end%>
+                              <%= link_to 'Create playlist', new_playlist_path(current_user),class:"btn btn-success btn-sm"%>
+                    </div>
+                    </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>   
+    </section>
+    <%end%>
+     <% @albums.each do |album| %>
+    <section style="background-color: #eee;">
+      <div class="container py-8">
+        <div class="row justify-content-center mb-3">
+          <div class="col-md-4 col-xl-10">
+            <div class="card shadow-0 border rounded-3">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
+                    <div class="bg-image hover-zoom ripple rounded ripple-surface">
+                      <!-- <#% if product.image.attached? %>
+                          <%#= image_tag(product.image, class: "image")%>
+                      <%# end%> -->
+                      <a href="#!">
+                        <div class="hover-overlay">
+                          <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                  <div class="col-md-6 col-lg-6 col-xl-6">
+                    <h5><strong><%= album.title %></strong></h5>
+                    <p class="text-truncate mb-4 mb-md-0">
+                        <%= album.description %>
+                    </p>
+                    <i>Album:
+                        <%= album.artist.name %><br>
+                    </i>
+                  </div>
+                  <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
+                    <div class="d-flex flex-column mt-2">
+                        <%= link_to 'Show', album_path(album), class:"btn btn-primary btn-sm" %>
+                        <div class="d-flex flex-column mt-2">
+                        <% if current_user.playlists.present?%>
+                                <%= form_with url: insertalbum_playlists_path, local: true do |form| %>
+                                    <div class="field form-group">
+                                      <%= text_field_tag :playlist_id, "", class:"form-control",placeholder:"Playlist Id"%><br>
+                                    </div>
+
+
+                                    <%= hidden_field_tag :album_id, album.id %>
+                                    <%= hidden_field_tag :user_id, current_user.id %>
+                                    <%= form.submit "Add to playlist" %>
+                                  <% end %>
+                              
+                          <%end%>
+                              <%= link_to 'Create playlist', new_playlist_path(current_user),class:"btn btn-success btn-sm"%>
+                    </div>
+                    </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>   
+    </section>
+  <% end %>
+<%elsif artist_signed_in?%>
+  <% current_artist.albums.each do |album| %>
+    <section style="background-color: #eee;">
+      <div class="container py-8">
+        <div class="row justify-content-center mb-3">
+          <div class="col-md-4 col-xl-10">
+            <div class="card shadow-0 border rounded-3">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
+                    <div class="bg-image hover-zoom ripple rounded ripple-surface">
+                      <!-- <#% if product.image.attached? %>
+                          <%#= image_tag(product.image, class: "image")%>
+                      <%# end%> -->
+                      <a href="#!">
+                        <div class="hover-overlay">
+                          <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                  <div class="col-md-6 col-lg-6 col-xl-6">
+                    <h5><strong><%= album.title %></strong></h5>
+                    <p class="text-truncate mb-4 mb-md-0">
+                        <%= album.description %>
+                    </p>
+                    <i>Artist:
+                        <%= album.artist.name %><br>
+                    </i>
+                  </div>
+                  <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
+                    <div class="d-flex flex-column mt-2">
+                        <%= link_to 'Show', album_path(album), class:"btn btn-primary btn-sm" %>
+                    </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>   
+    </section>
+  <% end %>
+<% else %>
+  <section class="main">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-7">
+    </div>
+  </section>
+  <% @albums.each do |album| %>
+    <section style="background-color: #eee;">
+      <div class="container py-8">
+        <div class="row justify-content-center mb-3">
+          <div class="col-md-4 col-xl-10">
+            <div class="card shadow-0 border rounded-3">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
+                    <div class="bg-image hover-zoom ripple rounded ripple-surface">
+                      <!-- % if product.image.attached? %>
+                          <%#= image_tag(product.image, class: "image")%>
+                      <#% end%> -->
+                      <a href="#!">
+                        <div class="hover-overlay">
+                          <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                  <div class="col-md-6 col-lg-6 col-xl-6">
+                    <h5><strong><%= album.title %></strong></h5>
+                    <p class="text-truncate mb-4 mb-md-0">
+                        <%= album.description %>
+                    </p>
+                    <p class="text-truncate mb-4 mb-md-0">
+                        <%= album.language %>
+                    </p>
+                    <i>Artist:
+                        <%= album.artist.name %><br>
+                    </i>
+                  </div>
+                  <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
+                    <div class="d-flex flex-column mt-2">
+                        <%= link_to 'Show', album_path(album), class:"btn btn-primary btn-sm" %>
+                        <%= link_to 'Add to Playlist' ,new_user_session_path, class:"btn btn-success btn-sm mt-2"%>
+     
+                    </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>   
+    </section>
+  <% end %>
+<%end%>
+</div>
