--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -49,7 +49,7 @@
                       
                       <div class="d-flex flex-row gap-2 col-6">
                             <%= link_to 'Show', song_path(song), class:"btn btn-primary mt-2" %>
-                            <%= button_to  'remove', playlist_path(:id => current_user.id,:song_id => song.id ,:playlist_id => @playlist.id),
+                            <%= button_to  'remove', playlist_path(:user_id => current_user.id,:song_id => song.id ,:playlist_id => @playlist.id),
                                     method: :delete, data: { confirm: 'Are you sure?' } ,class:"btn btn-danger  mt-2"%>   
                         </div>
                     </div>
@@ -63,8 +63,63 @@
           </div>   
       </section>
     <%end%>
-  
-  <%else%>
+    <%end%>
+    <% if @playlist.albums.present?%>
+    <% @playlist.albums.each do |album| %>
+      <section style="background-color: #eee;">
+        <div class="container py-1">
+          <div class="row justify-content-center mb-3">
+            <div class="col-md-12 col-xl-10">
+              <div class="card shadow-0 border rounded-3">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
+                      <div class="bg-image hover-zoom ripple rounded ripple-surface">
+                        <a href="#!">
+                          <div class="hover-overlay">
+                            <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                    <div class="col-md-6 col-lg-6 col-xl-6">
+                      <h5><strong><%= album.title %></strong></h5>
+                      <div class="d-flex flex-row">
+                        <div class="text mb-1 me-2">
+                          <div class="fa fa-star"></div>
+                          <div class="fa fa-star"></div>
+                          <div class="fa fa-star"></div>
+                          <div class="fa fa-star"></div>
+                        </div>
+                      </div>
+                      <p class="text-truncate mb-4 mb-md-0">
+                          <%= album.description %>
+                      </p>
+                      <p class="text-truncate mb-4 mb-md-0">
+                          <%= album.language %>
+                      </p>
+                      <p>Artist:
+                          <%= album.artist.name %>
+                      </p>
+                      
+                      <div class="d-flex flex-row gap-2 col-6">
+                            <%= link_to 'Show', album_path(album), class:"btn btn-primary mt-2" %>
+                            <%= button_to  'remove', playlist_path(:user_id => current_user.id,:album_id => album.id ,:playlist_id => @playlist.id),
+                                    method: :delete, data: { confirm: 'Are you sure?' } ,class:"btn btn-danger  mt-2"%>   
+                        </div>
+                    </div>
+                    
+                  </div>
+                </div>
+                
+              </div>
+              
+            </div>
+          </div>   
+      </section>
+    <%end%>
+  <%end%>
+  <% if !(@playlist.albums.present? || @playlist.songs.present?)%>
     <div class="container-fluid  mt-100">
             <div class="row">
             
