--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -27,7 +27,7 @@
       </div>
 
       <%= hidden_field_tag :artist_id, @artist %>
-     <%#= hidden_field_tag :album_id, @album %>
+     <%= hidden_field_tag :album_id, @album %>
       <div>
         <%= form.submit :Submit,style:"border: none;border-radius:5px;outline: 0;padding: 12px;color: white;background-color: #000;text-align: center;cursor: pointer;width: 50%;font-size: 15px;margin-left:150px;margin-top:30px" %>
       </div>
