--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -21,7 +21,10 @@
       <div>
         <%= form.text_field :description,class:"form-control",placeholder:"Description" %><br>
       </div>
-
+      
+      <div>
+        <%= form.text_field :image_url,class:"form-control",placeholder:"Image_Url" %><br>
+      </div>
       <div>
         <%= form.text_field :language,class:"form-control",placeholder:"Language" %><br>
       </div>
@@ -29,6 +32,7 @@
       <div>
         <%= form.text_field :image_url,class:"form-control",placeholder:"Image_Url" %><br>
       </div>
+      
       <%= hidden_field_tag :artist_id, @artist %>
      
       <div>
