--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -14,7 +14,12 @@
 
     <small class="form-text text-muted"><%= t('.leave_blank_if_you_don_t_want_to_change_it') %></small>
   </div>
-
+  
+  <div class="form-group">
+        <%= f.label :image_url %>
+        <%= f.text_field :image_url, autofocus: true, autocomplete: 'image_url', class: 'form-control' %>
+      </div>
+      
   <div class="form-group">
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation, autocomplete: 'new-password', class: 'form-control'  %>
