--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,11 @@
         <%= f.label :email %>
         <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
       </div>
-
+      
+      <div class="form-group">
+        <%= f.label :image_url %>
+        <%= f.text_field :image_url, autofocus: true, autocomplete: 'image_url', class: 'form-control' %>
+      </div>
       <div class="form-group">
         <%= f.label :password %>
         <%= f.password_field :password, autocomplete: 'current-password', class: 'form-control' %>
