--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -24,14 +24,19 @@
           <td><%= album.language %></td>
           <td><%= link_to 'Show', album_path(album),class:"btn btn-primary btn-sm" %></td>
           
-          <td><%= form_with url: insertalbum_playlists_path, local: true do |form| %>
-                                    <div class="field form-group">
-                                      <%= text_field_tag :playlist_id, "", class:"form-control",placeholder:"Playlist Id"%><br>
-                                    </div>
-                                    <%= hidden_field_tag :album_id, album.id %>
-                                    <%= hidden_field_tag :user_id, current_user.id %>
-                                    <%= form.submit "Add to playlist" %>
-                                  <% end %></td></tr>
+          <td><div class="center aligned ui container">
+                            <% if current_user.playlists.present?%>
+                              <%= form_with url: insertalbum_playlists_path , local: true do |form| %>
+                              <%= hidden_field_tag :album_id, album.id %>
+                              <%= hidden_field_tag :user_id, current_user.id %>
+                               <%= form.select(:playlist_id, current_user.playlists.collect {|c| [ c.title, c.id ] }, { include_blank: true }) %>
+                                <br>
+                                <br>
+                                <%= form.submit "Add to playlist ",class:"btn btn-primary" %>
+                              <% end %>
+                              <br>
+                          <%end%>
+                            </div>
           <% end %>
     </tbody>
   </table>
