--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -20,7 +20,10 @@
       <div>
         <%= form.text_area :description,class:"form-control",placeholder:"Description" %><br>
       </div>
-
+     
+      <div>
+        <%= form.text_field :image_url,class:"form-control",placeholder:"Image_Url" %><br>
+      </div>
       <div>
 
       <%= hidden_field_tag :user_id, @user %>
