--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -4,7 +4,12 @@
   <div class="card-body">
     <h5 class="card-title"><strong><%= @playlist.title %></strong></h5>
     <p class="card-text"><%= @playlist.description %></p>
-
+     <%if @playlist.image_url.present? %>
+        <p class="card-text",style="color:grey;font-size:22px;"><strong> <%= image_tag @playlist.image_url.to_s ,alt:'image' ,:size => "100x100" %></strong></p>
+    
+      <%else%>
+      <p class="card-text",style="color:grey;font-size:22px;"><strong><%= image_tag "https://mosaic.scdn.co/640/ab67616d00001e026fd209ba0b69ed8a3e2e0349ab67616d00001e027aa3700d9c7db21c2c5226c6ab67616d00001e02a359d88b8368698c7c44add9ab67616d00001e02a56fd563abc1c9017d6b53f0".to_s ,alt:'image' ,:size => "100x100" %></p>
+        <%end%>
     <!-- <%#= render 'albums/songshow' %> -->
 
     <h3 style="font-family:serif;text-align:center;margin-top:40px;">Playlist Details</h3>
